Modified Design ~ Improved Responsiveness

--- a/Valentine App/public/index.html
+++ b/Valentine App/public/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700i&display=swap&subset=cyrillic" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Kurale|Trade+Winds&display=swap" rel="stylesheet">
     <title>Greetings From Valentines</title>
 </head>
 <body>
     <section class="container_1">
         <div class="welcomeTextContainer heroSection">
-            <h1 class="welcome">Hi ! There</h1>
-            <p class="welcomeText">Welcome, come express your love for the Dev community</p>
+            <h1 class="welcome headText">Hi ! There</h1>
+            <p class="welcomeText headingText">Welcome, come express your love for the Dev community</p>
         </div>
     </section>
 
@@ -36,7 +37,7 @@
 
     <section class="container_2">
         <div class="welcomeTextContainer">
-            <h1 class="welcome">Hi ! There</h1>
+            <h1 class="welcome">Yeaaaah!</h1>
             <p class="welcomeText">welcome to this app please sign in to continue</p>
         </div>
     </section>
