Some minor changes

--- a/Valentine App/public/index.html
+++ b/Valentine App/public/index.html
@@ -11,7 +11,7 @@
 <body>
     <section class="container_1">
         <div class="welcomeTextContainer heroSection">
-            <h1 class="welcome headText">Hi ! There</h1>
+            <h1 class="welcome headText">Hi There</h1>
             <p class="welcomeText headingText">Welcome, come express your love for the Dev community</p>
         </div>
     </section>
